--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -1,7 +1,7 @@
 classname=org.xbib.elasticsearch.plugin.deploy.DeployPlugin
 jvm=true
 site=false
-isolated=true
+isolated=false
 description=Deploy plugin
 version=${project.version}
 elasticsearch.version=${elasticsearch.version}
