--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.xbib.elasticsearch.plugin</groupId>
     <artifactId>elasticsearch-plugin-deploy</artifactId>
-    <version>2.0.0.0-SNAPSHOT</version>
+    <version>2.0.0-beta1.0</version>
     <packaging>jar</packaging>
 
     <name>elasticsearch-plugin-deploy</name>
@@ -68,7 +68,7 @@
         <github.global.server>github</github.global.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.compiler.version>1.8</java.compiler.version>
-        <elasticsearch.version>2.0.0-beta1-SNAPSHOT</elasticsearch.version>
+        <elasticsearch.version>2.0.0-beta1</elasticsearch.version>
     </properties>
 
     <dependencies>
